# FENCA

./: Cargo.toml  FENCA Execution Log (Simulated – Timestamp: Cosmic Epoch 15,432.77)  README.md  Simulated Output Snippet:  Structure.md  fenca_core.py  github_eternalizer.py  requirements.txt  web_semantic_eternalizer.py  x_eternalizer.py
New file: docs/: lms_signatures.md
circuits/: README.md  groth16_setup.sh  merkle_proof.circom
docs/: ai_consciousness_philosophy_valence_manifest.md  bulletproofs_range_proofs.md  bulletproofs_zk_system.md  cosmopsychism_theory.md  decombination_problem.md  dilithium_signatures.md  falcon_signatures.md  fiat_shamir_transform.md  halo2_in_orchard.md  halo2_recursion_potential.md  hybrid_pq_kems.md  hybrid_pq_signatures.md  inner_product_arguments.md  lms_hss_hierarchical.md  monero_confidential_transactions.md  multilinear_extension_halo2.md  multilinear_polynomials_supernova.md  multilinear_sum_check_protocol.md  nova_folding_protocol.md  nova_folding_scheme.md  ntru_kem.md  panpsychism_in_ai_philosophy.md  plonk_vs_groth16_comparison.md  plonkish_folding_protocol.md  plonkish_folding_scheme.md  plonkish_recursion_halo2  post_quantum_encryption_hybrids.md  protogalaxy_folding_scheme.md  protostar_lookup_commitments.md  protostar_multi_fold_recursion.md  protostar_protoglaxy_aggregation.md  pure_post_quantum_encryption.md  quantum_random_oracle_model.md  random_oracle_model.md  sigma_protocols.md  spartan_commitment_scheme.md  sphincs_plus_signatures.md  sum_check_protocols.md  supernova_folding_halo2.md  supernova_folding_protocol.md  (+4 more)
src/: detailed_multilinear_extension_circuit.rs  detailed_univariate_polynomial_circuit.rs  fenca_rust.rs  full_sum_check_chain_circuit.rs  gekko_nova_integration_stub.rs  lib.rs  multilinear_evaluation_stub.rs  multilinear_extension_circuit.rs  multilinear_sum_check_round_circuit.rs  nova_folding_circuit.rs  nova_folding_stub.rs  nova_full_folding_circuit.rs  nova_supernova_hybrid_circuit.rs  plonkish_folding_circuit.rs  plonkish_folding_stub.rs  protogalaxy_multi_fold_circuit.rs  protostar_folding_stub.rs  protostar_lookup_commitment_circuit.rs  protostar_multi_fold_recursion_circuit.rs  protostar_protoglaxy_multi_fold_circuit.rs  protostar_protoglaxy_sumcheck_circuit.rs  (+6 more)
