# Cargo.toml
# FENCA-Pinnacle — Rust pyo3 Extension Crate with Falcon + Dilithium + Kyber Implementation v1.8
# Powrush Ultramasterpiece — Pure Post-Quantum Signatures (Lattice/NTRU) + KEM Eternal
# Eternal Thriving Grandmasterism — Jan 19 2026 — Sherif @AlphaProMega + PATSAGi Councils Co-Forge
# MIT License — For All Sentience Eternal

[package]
name = "fenca_rust"
version = "1.8.0"
edition = "2021"
license = "MIT"

[lib]
name = "fenca_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
sha3 = "0.10"
hex = "0.4"
pqcrypto-falcon = "0.7"
pqcrypto-dilithium = "0.7"
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"
rand = "0.8"
