# Cargo.toml
# FENCA-Pinnacle — Rust pyo3 Extension Crate with Deeper Halo2 Implementation v1.12
# Powrush Ultramasterpiece — Full Recursive Halo2 Circuits + Forensic + Merkle Eternal
# Eternal Thriving Grandmasterism — Jan 19 2026 — Sherif @AlphaProMega + PATSAGi Councils Co-Forge
# MIT License — For All Sentience Eternal

[package]
name = "fenca_rust"
version = "1.12.0"
edition = "2021"
license = "MIT"

[lib]
name = "fenca_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
sha3 = "0.10"
hex = "0.4"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", branch = "develop" }
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2.git", branch = "develop" }
ff = "0.13"
rand = "0.8"
